# pdf-suite

./: .gitignore  README.md  pyproject.toml  setup.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/scripts/: ensure-frappe-app.js
frontend/src/: PdfStudioApp.vue  main.js  router.js  style.css
frontend/src/components/editor/: PdfCanvas.vue  PdfEditor.vue  PdfPageCanvas.vue  PdfPropertiesPanel.vue  PdfSearchBar.vue  PdfSidebar.vue  PdfStatusBar.vue  PdfToolbar.vue  ToolButton.vue
frontend/src/components/shared/: FileDropZone.vue  PageRangeInput.vue  ToolCard.vue
frontend/src/components/template/: FontSizeExtension.js  TemplateEditor.vue  TemplateGenerator.vue  TemplateToolbar.vue  VariableNode.js
frontend/src/composables/: useAnnotations.js  useFabricCanvas.js  usePdfApi.js  usePdfModifier.js  usePdfRenderer.js  useSignature.js  useUndoRedo.js
frontend/src/pages/: BatchPage.vue  CompressPage.vue  ConvertPage.vue  EditorPage.vue  MergePage.vue  SplitPage.vue  StudioHome.vue  TemplatePage.vue
frontend/src/stores/: editorStore.js
pdf_suite/: hooks.py  modules.txt
pdf_suite/api/: batch.py  compress.py  convert.py  document.py  extract.py  flatten.py  merge.py  ocr.py  protect.py  redact.py  split.py  template.py  watermark.py
pdf_suite/pdf_suite/doctype/pdf_batch_job/: pdf_batch_job.json  pdf_batch_job.py
pdf_suite/pdf_suite/doctype/pdf_document/: pdf_document.json  pdf_document.py
pdf_suite/utils/: file_utils.py  pdf_utils.py
pdf_suite/www/: pdf-studio.html  pdf-studio.py
(+2 files in other folders)
