[project]
name = "pdf_suite"
authors = [
    { name = "Codebase Technologies", email = "dev@codebtech.com" },
]
description = "Full-featured PDF editing suite for Frappe"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

[tool.bench.apt-packages]
packages = [
    "tesseract-ocr",
    "tesseract-ocr-eng",
    "tesseract-ocr-ara",
    "libreoffice-writer",
    "poppler-utils",
    "ghostscript",
    "libpango-1.0-0",
    "libpangocairo-1.0-0",
    "libcairo2",
]
